crates/clx/src/dashboard/ui/snapshots/clx__dashboard__ui__sessions__render_snapshots__dashboard_ui_sessions_filter_no_match.snap
---
source: crates/clx/src/dashboard/ui/sessions.rs
expression: rendered
---
Sessions: 4 (0 active)  │  Tokens: 0 in/0 out  │  Cost: $0.00  │  Cmds: 0
░░░░░░░░░░ 0% allow  ░░░░░░░░░░ 0% deny  ░░░░░░░░░░ 0% prompt  │  Risk L:0 M:0 H:0
┌ Sessions (0) [filter: zzz-no-match] ─────────────────────────────────────────────────────────────┐
│Status     ID         Started ▼      Duration     Msgs    Cmds    Tokens     Project              │
│                                                                                                  │
│No session                                                                                        │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
